# SK2-Projekt-Gra

./: CMakeLists.txt  config.env  config.hpp  gameSerwer.cpp  main  main.cpp  serwer.cpp
Klient/Klient_gra/: CMakeLists.txt  config.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
